# cellular_automata

./: .gitignore  Cargo.toml  README.md  environment-dev.yml  pyproject.toml
python/conways_life/: cell_scene.py  cell_shape.py  cell_states.py  conways_life_rules.py  scene_rendering.py
python/game_of_life/: testing.ipynb
python/game_of_life/conways_life/: __init__.py  cell_scene.py  conways_life_rules.py  scene_rendering.py
python/game_of_life/python_backend_test/: testing.ipynb
scratch/: test_conways_life.ipynb  test_random_shapes.ipynb
src/: main.rs
src/bevy_backend/: main.rs
src/ggez_backend/: api_handler.rs  game.rs  main_state.rs  mod.rs  payload_to_shape.rs
src/rendering/: ggez_renderer.rs  mod.rs  renderer.rs
src/server/: endpoint_handler.rs  endpoint_reciever_stack.rs  endpoints.rs  json_or_form.rs  mod.rs  payloads.rs  router.rs  server.rs  status_codes.rs
src/shapes/: appearance.rs  mod.rs  rectangle_shape.rs  shape.rs  shape_types.rs  single_line_shape.rs  single_point_shape.rs  triangle_shape.rs
