[package]
name = "cellular_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forma = { version = "0.1.0", package = "forma-render" }
axum = "0.7.5"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.30.0"
ggez = "0.9.3"
anyhow = "1.0.40"
bevy = "0.13.2"